--- a/blockchainapplicability.tex
+++ b/blockchainapplicability.tex
@@ -27,7 +27,7 @@ This last point is one of the most important aspects, which is often overlooked 
 
 Informally speaking, a business knows it can easily access its own data at any time, so there is usually a lot of self trust. Therefore, businesses trust and rely a lot on themselves, but not always on others. Trust means being cooperative and relying on other business for the needed data, and believing that this data is also error-free. 
 
-As described by Panayides \cite{Panayides2009}, co-operation and trust are the key in improving supply chain performance and innovativeness, increasing the quality and leading to benefits for all parties involved. Similarly, Yeung \cite{Yeung2009} managed to find a relation between trust and a higher supply chain integration. In the context of supply chains, \textbf{trust might be defined as not only loyalty, but also reliability}. This last aspect is very important, because it measures just how much you can expect from your partners in a supply chain. And when you need information quickly, trust in the form of reliability is a very important asset to have.
+As described by Panayides~\cite{Panayides2009}, co-operation and trust are the key in improving supply chain performance and innovativeness, increasing the quality and leading to benefits for all parties involved. Similarly, Yeung~\cite{Yeung2009} managed to find a relation between trust and a higher supply chain integration. In the context of supply chains, \textbf{trust might be defined as not only loyalty, but also reliability}. This last aspect is very important, because it measures just how much you can expect from your partners in a supply chain. And when you need information quickly, trust in the form of reliability is a very important asset to have.
 
 In this sense, if the blockchain technology manages to improve the information flow in a supply chain, while maintaining security and trust between parties (at least at a technical level), then it follows that, just as concluded by Panayides and Yeung, the supply chain itself will have an improvement in performance, since the parties involved don't have to worry as much about these aspects or any power struggles. Therefore, \textbf{trust seems to be a key factor in building an efficient and effective supply chain}.
 
@@ -68,7 +68,7 @@ CargoX delivers a solution for making the Bill of Lading (B/L) documents digital
 \end{itemize}
 These characteristics make it an extremely valuable document, which must be transferred from the carrier to the company acquiring the products in a safe way. Losing this document would mean losing the rights to all the goods in the shipment, as well as losing the proof that they were even shipped in the first place.
 
-CargoX uses Ethereum's smart contracts to put these paper documents into the blockchain. It has a built in token system that allows to exchange the document's ownership immediately after payment \cite{CargoX2017}.
+CargoX uses Ethereum's smart contracts to put these paper documents into the blockchain. It has a built in token system that allows to exchange the document's ownership immediately after payment~\cite{CargoX2017}.
 
 \subsubsection{Relevance and Applicability}
 It is a very specific solution for a very specific problem. It is a concept that could be integrated in a broader solution, and should fit the needs of this dissertation partially, in theory. 
@@ -81,7 +81,7 @@ On the other hand, the project uses a token system that seems designed to moneti
 In the end, the idea of transmitting documents is an integral part of information integration, especially when these documents prove the ownership of something, and blockchain, depending on the execution, might be a good idea to digitize that proof of ownership in a way that can be traced. 
 
 \subsection{Eximchain}
-Eximchain is an all-round solution, which acts as a ledger, recording historical data and transactions, as an inventory management tool and also provides financial applications, by means of smart contracts. It was developed using a fork of Ethereum, Quorum, which is a permissioned version of Ethereum, focused on enterprise use, which means Eximchain runs on its own network \cite{Huertas2017}.
+Eximchain is an all-round solution, which acts as a ledger, recording historical data and transactions, as an inventory management tool and also provides financial applications, by means of smart contracts. It was developed using a fork of Ethereum, Quorum, which is a permissioned version of Ethereum, focused on enterprise use, which means Eximchain runs on its own network~\cite{Huertas2017}.
 
 
 The smart contracts of Eximchain allow for the transmission of finances and verification of the validity of orders placed. All the data from these transactions, which include the transmission of goods, is recorded onto the ledger, allowing suppliers to prove their reliability to deliver. 
@@ -93,14 +93,14 @@ At the same time, the inventory, as well as all the goods, as are tracked across
 This application seems to focus on the most important points of supply chain management: the tracking of goods by the enterprises, the financial process of transmitting those goods and the integration of this information. These applications are highly practical and resonates with the goals that this dissertation tries to achieve, which are exactly to turn SCM more efficient by making the information readily available.
 
 \subsection{OriginTrail}
-Like CargoX, OriginTrail operates on the Ethereum network, and has its own ERC20 tokens. It synchronizes all supply chain data in the platform, and uses these tokens as an incentive. Underlying the use of the Ethereum network, OriginTrail has a custom network topology protocol designed as a privacy-layer, which can be seen in Figure \ref{fig:origintrail_network}. This network uses zero-knowledge methods to validate data without making it accessible. This custom protocol consists of Data Holder (DH) and Data Creator (DC) nodes working together to receive, transmit, store and process the information. The data is communicated to the blockchain, where people with OriginTrail tokens can interact with it.
+Like CargoX, OriginTrail operates on the Ethereum network, and has its own ERC20 tokens. It synchronizes all supply chain data in the platform, and uses these tokens as an incentive. Underlying the use of the Ethereum network, OriginTrail has a custom network topology protocol designed as a privacy-layer, which can be seen in Figure~\ref{fig:origintrail_network}. This network uses zero-knowledge methods to validate data without making it accessible. This custom protocol consists of Data Holder (DH) and Data Creator (DC) nodes working together to receive, transmit, store and process the information. The data is communicated to the blockchain, where people with OriginTrail tokens can interact with it.
 
-The main objective of the project is to ensure traceability of the products as they move from supplier to retailer, all while ensuring the data is not tampered with, which means this project has a high focus on privacy. The tokens serve as a way to exchange data ownership, as well as to make reviews on a reputation system \cite{Rakic2017}.
+The main objective of the project is to ensure traceability of the products as they move from supplier to retailer, all while ensuring the data is not tampered with, which means this project has a high focus on privacy. The tokens serve as a way to exchange data ownership, as well as to make reviews on a reputation system~\cite{Rakic2017}.
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{media/origin_trail_network.jpg}
-\caption[Overview of the OriginTrail network.]{Overview of the OriginTrail network. Available in \cite{OriginTrailTechno}.}
+\caption[Overview of the OriginTrail network.]{Overview of the OriginTrail network. Available in~\cite{OriginTrailTechno}.}
 \label{fig:origintrail_network}
 \end{figure}
 
@@ -121,13 +121,13 @@ Like OriginTrail, Ambrosus also has its own protocol, called AMB-NET, which host
 This is another project with a more narrow scope, specializing in the tracking of the quality by using IoT. It is something that the other projects are not implementing, but it is important nonetheless. To some industries, it is even more important than any other feature, which makes quality-tracking a \textbf{must} in a supply chain management blockchain project.
 
 \subsection{IBM and Maersk's Demo}
-IBM, together with Maersk, just recently launched an innovative project which aims to create an open platform, using Hyperledger, for information sharing on a large scale \cite{A.P.MOLLER-MAERSK}.
+IBM, together with Maersk, just recently launched an innovative project which aims to create an open platform, using Hyperledger, for information sharing on a large scale~\cite{A.P.MOLLER-MAERSK}.
 
 It is an open platform, which features a shipping information pipeline and paperless trade. It deals mostly with the transportation of goods and automating all the processes associated with it. 
 
 \subsubsection{Relevance and Applicability}
 
-Although it has a similar purpose to the one of this thesis, there have been reports of companies discontent with this platform, since it does not focus on the industry as a whole and ensure common standards. Instead, it is a platform designed to meet IBM and Maersk's expectations. Other than this, there has been very little information about it yet or about any progress made \cite{Andersen2018}.
+Although it has a similar purpose to the one of this thesis, there have been reports of companies discontent with this platform, since it does not focus on the industry as a whole and ensure common standards. Instead, it is a platform designed to meet IBM and Maersk's expectations. Other than this, there has been very little information about it yet or about any progress made~\cite{Andersen2018}.
 
 \section{Designing a Blockchain-based Supply Chain}
 %CHECK https://modum.io/system/
