--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -9,12 +9,10 @@ There are several frameworks to build blockchains, as well as platforms to parti
 \subsection{Ethereum}
 
 With the purpose of building a blockchain that does more than just provide a currency system, the Ethereum project was developed and launched in 2014. A white paper, written by Vitalik Buterin was released explaining the concepts and inner-workings of this platform, and its popularity has been growing ever since. Citing Buterin's paper, Ethereum has the intent to \textit{"allow developers to create arbitrary consensus-based applications that have the
-scalability, standardization, feature-completeness, ease of development and interoperability" } \cite{Buterin2014}.
+scalability, standardization, feature-completeness, ease of development and interoperability" }~\cite{Buterin2014}.
 
 \subsubsection{Smart Contracts}
-In short, Ethereum is a blockchain platform that implements a Turing-complete programming language, allowing for the existence of code stored in the form of "contracts". This allows for the practical existence of Smart Contracts, a concept first proposed by Nick Szabo in 1996 \cite{szabo1996smart}. According to Szabo, \textit{"a smart contract is a set of promises, specified in digital form, including protocols within which the parties perform on these promises"}. 
-
-%\todo{fcorreia: in the above citation: make "A" lowercase and move the final mark to after the closing double quote. I'd also check this in the remaining citations of document.}
+In short, Ethereum is a blockchain platform that implements a Turing-complete programming language, allowing for the existence of code stored in the form of "contracts". This allows for the practical existence of Smart Contracts, a concept first proposed by Nick Szabo in 1996~\cite{szabo1996smart}. According to Szabo, \textit{"a smart contract is a set of promises, specified in digital form, including protocols within which the parties perform on these promises"}. 
 
 So, at a more superficial level, a smart contract is just source code, a structure that follows pre-specified rules, in order to move around assets and their ownership, such as cryptocurrency tokens. A smart contract reacts according to the interactions it has with the other elements of the blockchain, which, in a crude manner, can be either people or other contracts. In other words, Ethereum moves beyond the realm of currency and opens up the possibility for decentralized applications to be ran directly on the blockchain. Smart contracts are written in different kinds of custom languages, like Solidity, which are then compiled to byte code, deployed to the chain and interpreted by the Ethereum Virtual Machine (EVM).
 
@@ -34,31 +32,31 @@ The interesting aspect of Ethereum, however, is that the code from these applica
 
 \subsubsection{Consensus}
 
-At the moment, Ethereum is still using PoW as the consensus protocol, in a similar fashion to Bitcoin. There are projects currently trying to move Ethereum to PoS, such as Casper \cite{Buterin2017}. PoS is a consensus protocol with a different paradigm, in which the block mining process is roughly based on trust, on the fact that the miner has a certain stake or investment (like cryptocurrency) in the network, and so it is in their best benefit to be an honest node. 
+At the moment, Ethereum is still using PoW as the consensus protocol, in a similar fashion to Bitcoin. There are projects currently trying to move Ethereum to PoS, such as Casper~\cite{Buterin2017}. PoS is a consensus protocol with a different paradigm, in which the block mining process is roughly based on trust, on the fact that the miner has a certain stake or investment (like cryptocurrency) in the network, and so it is in their best benefit to be an honest node. 
 
-The benefit of PoS over PoW is that there isn't as much "waste" of computational power as in PoW. In PoW, miners have to intensively search for a target number, which allows them to claim the block as their own. This serves no other scientific or practical purpose other than making the mining process hard, and, as soon as a node successfully mines a block, all the energy used  by all the other mining nodes that were in this process basically goes to waste \cite{Buterin2013}. There are other concerns that make a PoS system like Casper a better option as well, such as performance concerns. 
+The benefit of PoS over PoW is that there isn't as much "waste" of computational power as in PoW. In PoW, miners have to intensively search for a target number, which allows them to claim the block as their own. This serves no other scientific or practical purpose other than making the mining process hard, and, as soon as a node successfully mines a block, all the energy used  by all the other mining nodes that were in this process basically goes to waste~\cite{Buterin2013}. There are other concerns that make a PoS system like Casper a better option as well, such as performance concerns. 
 
-%\todo{fcorreia: to call it "waste" is a bit strong, as this is a mechanism that fulfill a specific purpose (i.e., the "work" is suppose to have an increasing difficulty for the network to work). I do agree that other alternatives can be more computationally and energetically efficient though, and that this is ever more important as the use of these platforms increases, as so does the cost (financial, environmental, etc).}
+%{fcorreia: to call it "waste" is a bit strong, as this is a mechanism that fulfill a specific purpose (i.e., the "work" is suppose to have an increasing difficulty for the network to work). I do agree that other alternatives can be more computationally and energetically efficient though, and that this is ever more important as the use of these platforms increases, as so does the cost (financial, environmental, etc).}
 %It's still wasted power, it has no other purpose than artificially limiting each node's influence (while there are other mechanisms  which do the same and don't use any power). The computation itself just finds a nonce that serves no other purpose. If we were talking about Primecoin or other applications which use PoW to find nonces which are prime numbers and so on, then it would not  be a waste.
 
 
 \subsubsection{Performance and Scalability Issues}
 
-%\todo{fcorreia: \textbackslash{}paragraph is used for single paragraphs; something like a \textbackslash{}subsubsection would make more sense here, but that's a bit too many "sub"s already (harder for the reader to keep the context of where he is in mind). Maybe the best approach here is to just have the paragraphs with no further sectioning. You can highlight the important terms in bold (like you are already doing sometimes).}
 
 %\paragraph{Latency and Throughput} 
 
-Ever since its conception, there has been concern as to whether Ethereum's \textbf{throughput} and \textbf{latency} are enough to handle a large amount of applications running at once, and if it will be scalable in the future. The recent launch of an application by the name of CryptoKitties disrupted Ethereum, congesting the main network and slowing down the speed of transactions, again raising concern over Ethereum's performance.
-%\todo{fcorreia: add footnote with the URL?}
+Ever since its conception, there has been concern as to whether Ethereum's \textbf{throughput} and \textbf{latency} are enough to handle a large amount of applications running at once, and if it will be scalable in the future. The recent launch of an application by the name of CryptoKitties \footnote{\url{https://www.cryptokitties.co/}} disrupted Ethereum, congesting the main network and slowing down the speed of transactions, again raising concern over Ethereum's performance.
 
-These concerns are also very much valid for the case of supply chains. If Ethereum were to be integrated with a supply chain, by using smart contracts, one of the most important factors to take into account would be exactly the performance and scalability of the system. It is important to note, though, that private and public blockchains have different performances as well as different scalability concerns. Furthermore, certain values that affect the performance (such as the block time) also have an affect on the scalability, and consequently, on the security (a blockchain with a lot of nodes is more secure than one with fewer, for instance). This means that these attributes are interdependent and require a fine balance.
+These concerns are also very much valid for the case of supply chains. If Ethereum were to be integrated with a supply chain, by using smart contracts, one of the most important factors to take into account would be exactly the performance and scalability of the system. It is important to note, though, that private and public blockchains have different performances as well as different scalability concerns. Furthermore, certain values that affect the performance (such as the block time) also have an affect on the scalability, and consequently, on the security (a blockchain with a lot of nodes is more secure than one with fewer, for instance). This means that these attributes are interdependent and require a fine balance. It is important to mention that it is possible to deploy a network for Ethereum separate from the main network, so that it runs on a separate number of nodes and so that the network could have some of its values customized. However, such a network will still be public, like the main network already is, suffering from most of the same issues.
 
 In a public chain, security is a much bigger concern, as there are many different kinds of attacks, and the blockchain's values, such as the block size, are balanced in a way that tries to prevent these. Such values can easily be adjusted in a private chain, in ways they can't in a public chain, where they would cause forks, clog the chain or raise security issues. In addition, private blockchain deployments are usually more centralized, concentrating their power in fewer nodes, as there is an inherent sense of trust from within the network. For this very reason, this type of blockchain is more easily scalable as well.
+
+
 
 The performance of blockchains such as Ethereum is usually measured by the average throughput, which is the number of processed transactions per second (TPS). This depends a lot on two main factors:
 \begin{itemize}
 \item The block size - in Ethereum, the block size is not a fixed value; rather, it has a "gas" limit; each transaction put into the block spends some gas, and when the gas reaches the limit for that block, the block is full; here, "gas" is a unit that refers to the computational steps taken to process a certain transaction or contract; the more complex the transaction, the more "gas" it spends;
-\item The average time to publish a block - block interval; in Bitcoin, this was a fixed 10 minute time, but in Ethereum, this time can be as low as 15 seconds \cite{Scherer2017}; this is directly related to the latency, the time a transaction takes to be integrated into the blockchain;
+\item The average time to publish a block - block interval; in Bitcoin, this was a fixed 10 minute time, but in Ethereum, this time can be as low as 15 seconds~\cite{Scherer2017}; this is directly related to the latency, the time a transaction takes to be integrated into the blockchain;
 \end{itemize}
 
 The fact that both transactions and block can vary in their size makes it hard to theoretically pinpoint what the performance of an Ethereum network is. In practice, though, and according to recent studies and statistics gathered, the throughput of the main Ethereum network is around 15 TPS. %again, o mesmo estudo dá estes valores.
@@ -66,14 +64,12 @@ The fact that both transactions and block can vary in their size makes it hard t
 %\paragraph{Blockchain Size}
 Besides latency and throughput, most blockchains are facing the problem that the \textbf{blockchain size}, the required to store the blockchain itself is becoming increasingly large, and is constantly growing. With this kind of pace, not every node will be able to store the chain in order to validate it.
 
-This easily becomes a security problem for public blockchains, as the power will be concentrated among the few nodes who can store the blockchain. In Ethereum, every node has to store and process all transactions as well as store the entire state of the blockchain \cite{Scherer2017}, hence, this is an important issue to address. 
+This easily becomes a security problem for public blockchains, as the power will be concentrated among the few nodes who can store the blockchain. In Ethereum, every node has to store and process all transactions as well as store the entire state of the blockchain~\cite{Scherer2017}, hence, this is an important issue to address. 
 
 
 \subsubsection{Proposed Solutions}
 
 Solutions to the above mentioned issues of the above mentioned issues have already been proposed and are being tested. Some of these are Raiden, Casper, Sharding and Plasma.
-
-%\todo{fcorreia: previous paragraph needs reviewing.}
 
 \paragraph{Casper - PoS-based efficiency and security scalability}
 
@@ -83,33 +79,17 @@ Casper has the important characteristic of accountability. The validator nodes d
 
 Another important aspect of Casper is that, as a PoS based mechanism, it allows for a more efficient Blockchain as it enables miners to work without high end hardware and high electricity costs, while also potentially allowing for lower block times.
 
-%\todo{fcorreia: missing reference for Casper}
-% No, it's not, it was some paragraphs above
-
 \paragraph{Sharding - Transaction throughput scalability}
 
-Sharding is a solution that aims to increase the throughput of Ethereum. It acts upon the problem that every node must validate every transaction, by dividing nodes and transactions into subsets and assigning them such that a subset of the nodes will verify a subset of transactions \cite{ButerinSharding}. This allows for transactions to be processed in parallel, and, as long as there are enough nodes validating a transaction, security is maintained, and more transactions per second are able to be processed, therefore increasing throughput in a scalable way.
+Sharding is a solution that aims to increase the throughput of Ethereum. It acts upon the problem that every node must validate every transaction, by dividing nodes and transactions into subsets and assigning them such that a subset of the nodes will verify a subset of transactions~\cite{ButerinSharding}. This allows for transactions to be processed in parallel, and, as long as there are enough nodes validating a transaction, security is maintained, and more transactions per second are able to be processed, therefore increasing throughput in a scalable way.
 
 \paragraph{Raiden - Token transfer throughput scalability}
-Raiden is a solution that allows for off-chain transfers of tokens to happen outside the blockchain, on a side-channel, in a secure way, using cryptography to build \textit{balance proofs} \cite{Hees}. This way, for a certain number of transactions, a side channel can be opened, the transactions are performed, and, at the end, the channel is closed and the transactions are submitted onto the chain. Raiden implements the protocol that provides the routing between the nodes and all other functionalities that make this possible.
+Raiden is a solution that allows for off-chain transfers of tokens to happen outside the blockchain, on a side-channel, in a secure way, using cryptography to build \textit{balance proofs}~\cite{Hees}. This way, for a certain number of transactions, a side channel can be opened, the transactions are performed, and, at the end, the channel is closed and the transactions are submitted onto the chain. Raiden implements the protocol that provides the routing between the nodes and all other functionalities that make this possible.
 
 \paragraph{Plasma - Throughput scalability}
-Plasma uses smart contracts to build hierarchical side chains, that can be thought of as children of the main blockchain. These chains process information as a normal chain would, being governed by their own rules and constraints, and it is even possible to revert transactions within them, as they have a smaller scope and are built apart from the main chain. These child chains can then relay information back to the main blockchain. Theoretically, there is no limit to the number of chains, allowing for great scalability \cite{Poon2017}.
+Plasma uses smart contracts to build hierarchical side chains, that can be thought of as children of the main blockchain. These chains process information as a normal chain would, being governed by their own rules and constraints, and it is even possible to revert transactions within them, as they have a smaller scope and are built apart from the main chain. These child chains can then relay information back to the main blockchain. Theoretically, there is no limit to the number of chains, allowing for great scalability~\cite{Poon2017}.
 
 \break
-
-
-\todo{pedro: explain that ethereum might be expensive to use, but it can be used privately?}
-\iffalse
-\subsection{Usability}
-- Explain that, though there is a main ethereum network, it can also be deployed privately
-
-- Examples of companies that Ethereum, either in the public chain, or in a private one
-
-\subsection{Ethereum Applicability to Supply Chain}
-Maybe this subsection is already what is described in the sections that follow, such as section 3.5 Applications and so on. Especially in section 3.5, I should explain better how the Applications of Ethereum (section 3.4.4), can be applied in general
-- Talk about Eth possible applicability, because of the fact it might be expensive;
-\fi
 
 \subsection{Hyperledger Fabric}
 
@@ -124,8 +104,6 @@ A big difference to Ethereum, though, is the language used in the chaincode. Pro
 
 Being able to use general-purpose languages to code smart contracts is an advantage and lowers the barrier of entry to use this framework as a blockchain. But it also raises the issue that the code might be non-deterministic, leading to forks, which is the specific reason why Ethereum uses a language that it compiles and runs on EVM. 
 
-%\todo{pedro: explicar mais a fundo o conceito?}
-%\todo{fcorreia: I was happy with the current level of detail; may be worth expanding if you think the next sections/chapters will need more context than the one you are already giving now.}
 
 \subsubsection{Architectural Revision}
 The latest version of Fabric, v1.1, has a totally revised architecture from some of the previous versions, like v0.6. These changes in architecture originated from changes in the requirements, as well as to better address some other underlying issues of the technology.
@@ -138,8 +116,8 @@ This was a simple architecture, but it has several liabilities when used in a pe
 \item Hard-coded consensus: there is no "one-size-fits-all" solution, protocols vary immensely in performance and functionality, and having alternatives and adaptation to specific use cases is essential;
 \item Confidentiality of execution: sometimes, smart contract logic is intended to be restricted, only to be run by some nodes, though the state should be propagated to all nodes in the end; this architecture does not allow for such a restriction
 \end{itemize}
-%TODO: CHECK IF LINKS STILL WORK
-A detailed architectural specification of Fabric's revised version 1.1 can be found in the documentation section of Fabric's website \cite{FabricDocArch} \cite{IBMResearch2017}. Other articles have been produced by IBM researchers \cite{Cachin2016} \cite{Vukolic2017}, as well as numerous presentations, detailing the general architectural problems and solutions of this technology.
+
+A detailed architectural specification of Fabric's revised version 1.1 can be found in the documentation section of Fabric's website~\cite{FabricDocArch}~\cite{IBMResearch2017}. Other articles have been produced by IBM researchers~\cite{Cachin2016}~\cite{Vukolic2017}, as well as numerous presentations, detailing the general architectural problems and solutions of this technology.
 
 This revised version follows instead an "Execute-Order-Validate" implementation, which tackles the above mentioned issues, and, according to Fabric's documentation, the advantages this reviewed architecture brings are \textbf{scalability}, \textbf{confidentiality}, \textbf{consensus modularity} and \textbf{chaincode trust flexibility}.
 %I do not really understand the term they use "chaincode trust flexibility", it just looks like they didn't know how to name the characteristic and made something up...
@@ -171,7 +149,7 @@ Types of nodes:
 \item Orderer Node - the orderer nodes together form a ordering service; this service uses a certain pluggable (changeable) protocol to order the transactions received from the peers, create a block with them and then broadcast this block to the committers;
 \end{itemize}
 
-In a simplified way, the workflow of the consensus, as shown in Figure \ref{fig:fabric_workflow},  is as follows:
+In a simplified way, the workflow of the consensus, as shown in Figure~\ref{fig:fabric_workflow},  is as follows:
 \begin{enumerate}
 \item The client transmits the transaction to the endorser nodes.
 \item The endorser nodes simulate the transaction and choose whether they endorse it or not. If they do, they sign the transaction and send the endorsement back to the client.
@@ -181,17 +159,15 @@ In a simplified way, the workflow of the consensus, as shown in Figure \ref{fig:
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{media/fabric_workflow.png}
-\caption[Consensus workflow in Hyperledger Fabric]{Consensus workflow in Hyperledger Fabric. Available in \cite{IBMResearch2017}.}
+\caption[Consensus workflow in Hyperledger Fabric]{Consensus workflow in Hyperledger Fabric. Available in~\cite{IBMResearch2017}.}
 \label{fig:fabric_workflow}
 \end{figure}
 
-Compared to other blockchains, this consensus mechanism has some advantages, though its application is somewhat limited to some use cases. Table \ref{table:consensus_comparison} summarizes some points of difference between a blockchain using Proof of work and one, like Hyperledger, using a BFT state machine consensus.
+Compared to other blockchains, this consensus mechanism has some advantages, though its application is somewhat limited to some use cases. Table~\ref{table:consensus_comparison} summarizes some points of difference between a blockchain using Proof of work and one, like Hyperledger, using a BFT state machine consensus.
 
 
 
 \todo{fcorreia: reduzir tamanho de letra da tabela seguinte}
-
-\todo{fcorreia: valerá a pena este colorido todo na tabela?}
 
 %%%%%%%%%%%%%%%% TABELA COMPARATIVA %%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -232,20 +208,20 @@ It features a nice and intuitive graphical user interface to manage all of its c
 
 \subsubsection{Business Network}
 
-\todo:{pedro: compor um pouco do state of the art do composer com mais informacao sobre exatamente o que é uma business network, que é um modelo que pode ser deployed quantas vezes se quiser, mas cada deployment num conjunto de nós diferente é basicamente um ledger diferente. Explicar que o mesmo design de uma business network pode ter a sua topologia e permissões modificadas para adaptar a outra supply chain, um grande beneficio desta ferramenta. Explain that a deployed business network is a ledger that works for a group of companies that wants to form a blockchain for their own supply chain; }
+A business network is a model of all the data in the blockchain, which includes all the objects, functions, transactions and identities that will connect to each other and be saved on the ledger. It is basically an abstraction of the chaincode that will be installed onto Fabric. A business network, being a network model, can be deployed into an instance that runs on a certain number of nodes.
 
-%Paragraph 1 - STATE OF THE ART- explain what a business network is - that it can be deployed as many times as one ones, for a certain number of nodes, and then people with identities can join that network and interact with it. It is therefore, the source of truth underlying the supply chain. The business network is divided into 2 important parts, which need to be designed separately.
-
-A business network is a model of all the data in the blockchain, which includes all the objects, functions, transactions and identities that will connect to each other and be saved on the ledger. It is basically an abstraction of the chaincode that will be installed onto Fabric.
-
-Composer features a custom modeling language which makes it easier to define a business network. It is divided into 4 main components, as can be seen in Figure \ref{fig:composer_abstraction}.
+Composer features a custom modeling language which makes it easier to define a business network. It is divided into 4 main components, as can be seen in Figure~\ref{fig:composer_abstraction}.
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.40]{media/Composer-Diagram.png}
-\caption[Hyperledger Composer abstraction over Fabric]{Hyperledger Composer abstraction over Fabric. Available in Composer's documents \cite{ComposerIntro}.}
+\caption[Hyperledger Composer abstraction over Fabric]{Hyperledger Composer abstraction over Fabric. Available in Composer's documents~\cite{ComposerIntro}.}
 \label{fig:composer_abstraction}
 \end{figure}
+
+If a business network model is deployed multiple times with a different sets of nodes each time, it will simply constitute different instances of a network model. Each instance will constitute a separate network with a separate ledger, independent from the other networks. This is analog to modelling a class in a object oriented programming and then instancing it multiple times. Each instance is separate from the others, even though it is based on the same model. Therefore, a good model design can be used by several businesses separately, and each can configure the model to represent the topology they are looking for.
+
+The 4 main components: 
 
 \paragraph{Model File} This is where all the main data components are defined. \textbf{Assets} are the main "objects" that are handled in transactions, and they can represent a variety of things. One example can be a "car". \textbf{Participants} are the types of people that will be participating in the network. One example participant can be "Customer", which will have fields like "Balance" and "Name". An instance of a participant can be linked to a real identity of a person using the blockchain. \textbf{Transactions} are the most important data object. They model what actions can be taken, and they usually have some data fields associated, which act as the input of the transaction. An example of a transaction can be "BuyCar", which could have as parameters the car ID, and a participant could then call this transaction, if they had the permission to do so. All these 3 components, Assets, Participants and Transactions have their own registry. While the Assets and Participants registries are mutable, the Transactions registry is not.
 
@@ -281,7 +257,7 @@ This is a very specific purpose, which means that Corda's application on Supply 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.16]{media/corda_shared_ledger.png}
-\caption[Corda's vision on a Shared Ledger]{Corda's vision on a Shared Ledger. Available in Corda's White Paper \cite{Brown2016}.}
+\caption[Corda's vision on a Shared Ledger]{Corda's vision on a Shared Ledger. Available in Corda's White Paper~\cite{Brown2016}.}
 \label{fig:shared_ledger}
 \end{figure}
 
@@ -293,9 +269,6 @@ There are some other important concepts to understand how Corda works:
 \paragraph{Transactions} These are the actions that change the state of the ledger.
 \paragraph{Transaction Protocols} It is the business logic that enables the coordination of actions, through the smart contract code.
 
-
-%\todo{pedro: listar as features/functionalities do Corda? http://prntscr.com/ibws9p}
-%\todo{fcorreia: those look more like high-level goals of Corda, not exactly features. Some of them sound relevant enough for a mention here, but I'm not sure if all do.}
 
 \subsubsection{CorDapps}
 CorDapps are distributed applications running on the Corda platform. The concepts of State Objects, Transaction Protocols, among others, all fit into these distributed applications.
@@ -309,13 +282,13 @@ As with Ethereum, Corda also uses a virtual machine. In this case it is the Java
 
 \subsection{Comparison}
 Comparison's between these three platforms are recurrent, though Hyperledger and Corda might have more in common with each other than with Ethereum. 
-Valenta \cite{Valenta2017} concisely describes the main points of difference between these frameworks, with a focus on the consensus process and general characteristics of the frameworks. 
+Valenta~\cite{Valenta2017} concisely describes the main points of difference between these frameworks, with a focus on the consensus process and general characteristics of the frameworks. 
 
 He concluded that Ethereum is more of a general purpose platform, while Fabric tries a different solution, adaptable to a different set of problems. Fabric is flexible and customizable in ways that the other frameworks aren't. On the other end, Corda  was designed with one specific application in mind, financial services, and it is rigid in that sense, which actually made its architecture a lot more simple compared to Fabric's. It is also arguable that Hyperledger can be tailored to resemble Corda, due to its modularity, as Corda is not really a competitor of Hyperledger, but rather a complement. 
 
 \paragraph{Hyperledger vs Corda} In one sense, Corda has more of an out-of-the box experience, while with Fabric, the logic would have to be implemented. Composer does make Fabric more user-friendly, but it is still hard to setup and configure, compared to Corda. It all comes down to what kind of system we want to build, and what are its the final objectives, functionalities and requirements.
 
-\paragraph{Ethereum vs Hyperledger} Also, as already pointed out in Section \ref{hyperledger_architecture}, a permissioned ledger like in Hyperledger might better fit the supply chain industry requirements than Ethereum, though one solution does not discard the other. Another important aspect to distinguish is also the difference in performance between these platforms.
+\paragraph{Ethereum vs Hyperledger} Also, as already pointed out in Section~\ref{hyperledger_architecture}, a permissioned ledger like in Hyperledger might better fit the supply chain industry requirements than Ethereum, though one solution does not discard the other. Another important aspect to distinguish is also the difference in performance between these platforms.
 
 
 
@@ -323,15 +296,15 @@ He concluded that Ethereum is more of a general purpose platform, while Fabric t
 \label{sec-performance-comparison}
 The difference in performance of various blockchain platforms is a crucial topic to address, that might lead to choosing one platform over another, with similar functionalities. In the case of Supply Chain, it might be important to measure the difference in performance of Ethereum and Hyperledger, for instance. 
 
-Pongnumkul has conducted a performance analysis of private deployments of these platforms \cite{Pongnumkul2017} and he reached some interesting conclusions. In summary, \textbf{Hyperledger's performance is higher in every aspect than Ethereum's (on a private deployment)}, but, for the same resources, \textbf{Ethereum can actually handle a higher number of concurrent transactions}. 
+Pongnumkul has conducted a performance analysis of private deployments of these platforms~\cite{Pongnumkul2017} and he reached some interesting conclusions. In summary, \textbf{Hyperledger's performance is higher in every aspect than Ethereum's (on a private deployment)}, but, for the same resources, \textbf{Ethereum can actually handle a higher number of concurrent transactions}. 
 
 The metrics used in the analysis are \textbf{throughput}, \textbf{latency} and \textbf{execution} time.
-In every test performed, Hyperledger had a higher throughput, lower latency and lower execution time than Ethereum. The disparity between these numbers also grew with the number of transactions, with Ethereum's performance degrading much more than Hyperledger's for the same increase in transactions. This means that Hyperledger not only performs better, it also scales better, as seen in Figure \ref{fig:latency_comparison}.
+In every test performed, Hyperledger had a higher throughput, lower latency and lower execution time than Ethereum. The disparity between these numbers also grew with the number of transactions, with Ethereum's performance degrading much more than Hyperledger's for the same increase in transactions. This means that Hyperledger not only performs better, it also scales better, as seen in Figure~\ref{fig:latency_comparison}.
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.75]{media/average_latency_frameworks.png}
-\caption[Comparison of average latency between Ethereum and Hyperledger, with growing number of transactions]{Comparison of average latency between Ethereum and Hyperledger, with growing number of transactions. Available in \cite{Pongnumkul2017}.}
+\caption[Comparison of average latency between Ethereum and Hyperledger, with growing number of transactions]{Comparison of average latency between Ethereum and Hyperledger, with growing number of transactions. Available in~\cite{Pongnumkul2017}.}
 \label{fig:latency_comparison}
 \end{figure}
 
