--- a/conclusions.tex
+++ b/conclusions.tex
@@ -13,7 +13,7 @@ All the work and contributions of this dissertation aim towards proving whether 
     \item \textbf{Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?}
 \end{enumerate}
     
-Chapter \ref{chap:survey} provided the answer to the first question. Chapter \ref{chap:prototype} used this answer to provide the answer to the second and third questions, which can now lead to a final conclusion towards the initial statement.
+Chapter~\ref{chap:survey} provided the answer to the first question. Chapter~\ref{chap:prototype} used this answer to provide the answer to the second and third questions, which can now lead to a final conclusion towards the initial statement.
 
 
 \subsection*{Thesis Statement}
@@ -27,10 +27,10 @@ If we were to compare a new architectural design against other existing designs 
 \emph{Therefore, if a good design is one that must be able to satisfy all of the requirements, then Blockchain is not a good architecture for the supply chain management domain.}
 
 
-However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it might not good be enough to satisfy all the requirements, does not mean it cannot be used together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
+However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it might not be good enough to satisfy all the requirements, does not mean it cannot be used together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
 
 \section{Contributions}
-It is important that a conclusion was reached, but it is also important to look at what work was done to reach that conclusion. The whole process of originating the answers to the questions that support the conclusion also generated useful contributions. 
+It is important that a conclusion was reached, but it is also important to look at the work was done to reach that conclusion. The whole process of originating the answers to the questions that support the conclusion also generated useful contributions. 
 
 These contributions might be useful for future research:
 
@@ -65,7 +65,7 @@ The work done in this research was not always linear, even though the logic is m
 
 One of the initial difficulties that most impacted the research was the lack of a quantitative baseline to compare the proposed project to. There are many other projects that attempt to, in one way or another, enhance the capabilities of supply chain by applying blockchain, some even showcased in the literature review. However, none had publicly available efficiency metrics that could be used for this project to be compared to. A lot of developers and companies were contacted to try to collect more data from the existing projects, to establish a baseline but the contacts did not fall through in a satisfactory way. 
 
-In the same way, some supply chain companies were contacted to the purpose of establishing a quantitative baseline for the needs of supply chain. This could have included, for example, knowing how many products a company shipped per a certain ammount of time, since this data could lead to interesting conclusions. But none had the specific data needed or the interest to maintain a continuous working relationship for the purposes of this research.
+In the same way, some supply chain companies were contacted to the purpose of establishing a quantitative baseline for the needs of supply chain. This could have included, for example, knowing how many products a company shipped per a certain amount of time, since this data could lead to interesting conclusions. But none had the specific data needed or the interest to maintain a continuous working relationship for the purposes of this research.
 
 Thus, one of the biggest difficulties for this dissertation was the lack of partnerships and difficulty in establishing and maintaining contacts interested in contributing to the research. This was also one of the aspects that a lot of time in this dissertation was put into, without fruitful results to show for the effort done.
 
@@ -94,7 +94,7 @@ Future work might include:
 %COMPARAR COM CLOUD E OUTRAS ARQUITETURAS
 %VALIDAR PROTOTIPO COM PESSOAS REAIS
 
-%The research for this dissertation is divided into six steps, described in Table \ref{table:gantt_chart} and illustrated by Figure \ref{fig:gantt_chart}. The research started with the literature review, which presents some important insights, frameworks as well as some important design aspects and decisions to take while developing a model for a Blockchain-driven supply chain project.
+%The research for this dissertation is divided into six steps, described in Table~\ref{table:gantt_chart} and illustrated by Figure~\ref{fig:gantt_chart}. The research started with the literature review, which presents some important insights, frameworks as well as some important design aspects and decisions to take while developing a model for a Blockchain-driven supply chain project.
 %
 %These aspects will be taken into account for the next steps. First, adapting and creating a Blockchain integration model, by making some decisions on the design and frameworks to be used. Then, a small integration project will be built based on this model.
 
