--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -17,8 +17,7 @@ After having previously mentioned some background information about Blockchain t
 In SCM, a product's life cycle can be roughly divided into the many phases the product goes through, down from the raw materials up until the finished product ends in the hands of a consumer. Starting in the raw materials, these undergo iterations of processing and shipment, traveling from one place to another, while being transformed in successively more refined products \todo{fcorreia: da forma como está escrito dás a entender que é obrigatório serem transformados. na frase que vêm a seguir tentas clarificar isso, mas pode ser confuso se os leitores tiverem percebido o contrário nesta frase} and changing owners. This holds true for any product in any kind of industry, and even the simplest of products which might not require any processing (for instance, fresh produce), have to be shipped from their place of origin to the place where they will be sold.
 
 
-
-\textbf{The improvement of the management of this life cycle is the main objectives of this thesis. This improvement, however, has many points of focus. Some were already briefly introduced in sections \ref{supply_chains} and \ref{supply_chain_challenges}, from which we can extract the following points as the most important.}
+\textbf{The improvement of the management of this life cycle is one of the main objectives of this thesis. This improvement, however, has many points of focus. Some were already briefly introduced in Sections~\ref{supply_chains} and~\ref{supply_chain_challenges}, from which we can extract the following points as the most important.}
 
 \todo{fcorreia: Concordância entre plural e singular ("is" vs "objectives"). Deves começar com letra maiuscula sempre que forem nomes de elementos do documento, como "Sections 1.1", "Figure xpto"}
 
@@ -98,7 +97,7 @@ Therefore, the thesis that underlies this work is that:\\
 E a seguir já estás a dizer que há várias assunções por trás disto, e explicas quais são, o que me parece mto bem. }
 
 % THESIS branches: all the possibilities that might happen
-This statement may be based on many assumptions, which gives rise to some more questions. For instance, we are assuming that the points of focus from section \ref{sec:points-of-focus} are really the most important ones, given the background information that was collected.
+This statement may be based on many assumptions, which gives rise to some more questions. For instance, we are assuming that the points of focus from Section~\ref{sec:points-of-focus} are really the most important ones, given the background information that was collected.
 
 Thus, the questions that need to be answered first, in order to reach a conclusion towards the main thesis statement are the following:
 \begin{enumerate}
@@ -120,7 +119,7 @@ These questions are sequential, meaning that, in order to answer one of them, we
 %TODO: ANSWER THESE LAST 2 POINTS
 
 % To test the thesis, we will divide the work in 2 parts: survey and prototype;
-To answer these questions from section \ref{subsec:thesis-statement}, the work of this dissertation was divided into two main parts, each of them comprising a chapter:
+To answer these questions from Section~\ref{subsec:thesis-statement}, the work of this dissertation was divided into two main parts, each of them comprising a chapter:
 \begin{enumerate}
 \item \textbf{Survey Research - Supply Chain Issues Validation and Requirements Elicitation}
 \item \textbf{Software Engineering - Architectural Design and Implementation of a Prototype}
