--- a/prototype/prototype2.tex
+++ b/prototype/prototype2.tex
@@ -4,7 +4,7 @@
 \todo{pedro: specify that the requirements here used differ slighlty, because the survey took a bit to collect the results}
 This section specifies the requirements for the software that was built using Hyperledger Fabric and Composer. The design, implementation and validation of these requirements is the subject of the following chapters.
 
-The structure for this specification will somewhat resemble the organization of IEEE 830-1998 requirements specification standard \ref{}, but in a simplified way, without some of the unneeded clutter and information. The specification is divided in the following way:
+The structure for this specification will somewhat resemble the organization of IEEE 830-1998 requirements specification standard~\ref{}, but in a simplified way, without some of the unneeded clutter and information. The specification is divided in the following way:
 \begin{enumerate}
 	\item Introduction - Product purpose, scope, overview and users;
 	\item Requirements - Specific requirements including functional requirements, non-functional or quality requirements, permission list and design constraints.
