--- a/prototype/prototypeconclusion.tex
+++ b/prototype/prototypeconclusion.tex
@@ -15,7 +15,6 @@ The design itself is feasible to be implemented, and even though the tool has so
 %Untapped fabric+composer potential with multiple channels, endorsement policies, custom consensus algorithms
 
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
-
-\todo{pedro: yes, analyse other tools; they also dont fill all the requirements!}
+%YUP, and the other tools might also not fill the requirements, which is interesting.
 
 Most of the projects analyzed in the state-of-the-art, thought they use a multitude of different frameworks and custom networks, also do not focus on satisfying all of the requirements, but mostly a subset of them. Most of the projects specialize only in 1 problem area, like traceability, instead of going for an all-rounded concept.
