--- a/references.bib
+++ b/references.bib
@@ -377,8 +377,8 @@ year = {2017}
 author = {{IBM Research}},
 pmid = {15014603},
 title = {{Architecture Explained}},
-url = {http://hyperledger-fabric.readthedocs.io/en/release/arch-deep-dive.html},
-urldate = {2018-02-07}
+url = {http://hyperledger-fabric.readthedocs.io/en/release-1.1/arch-deep-dive.html},
+urldate = {2018-06-26}
 }
 
 @article{IBMResearch2017,
