--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -4,11 +4,10 @@
 %TODO: mencionar que vai estar nos anexos o inquerito completo? (se der para la por)
 
 
-The results of the survey are analyzed in this chapter. Each group features the graphics and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
+The results of the survey are analyzed in this chapter. Each group features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
 
 \todo{fcorreia: devido ao que já disse antes, sempre que usares a palavra "group" o mais seguro será dizeres "group of questions"}
 
-\todo{fcorreia: graphics -> graphs}
 
 \subsection{Group 1 - General Information and Participant Classification}
 
@@ -42,7 +41,7 @@ The results of the survey are analyzed in this chapter. Each group features the 
 
 Data from the participants was inquired, including: role, industry, years of experience and company size (if  they worked in one at all).
 
-The data, as can be seen in Figure \ref{fig:group1_graphics}, can be summarized in the following statements:
+The data, as can be seen in Figure~\ref{fig:group1_graphics}, can be summarized in the following statements:
 
 \todo{fcorreia: "Figure 6.1" (capital F)}
 
