--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -12,7 +12,7 @@ This section features some questions that inquire about the respondent's knowled
 \label{fig:blockchain_knowledge}
 \end{figure}
 
-In Figure \ref{fig:blockchain_knowledge}, it can be seen that most answers are in the middle of the scale, while both the extremes have few answers, which closely resemble a gaussian or normal distribution. 
+In Figure~\ref{fig:blockchain_knowledge}, it can be seen that most answers are in the middle of the scale, while both the extremes have few answers, which closely resemble a gaussian or normal distribution. 
 
 Indeed, when calculated, the skew of this data is about -0,065104294, which is a very low number (the standard error was about 0,46) and close to 0. A normal distribution has a skew of 0, so this can be said to be a good approximation. Additional, it can be said that there is not much of a bias towards accepting or denying blockchain when answering other questions, either from knowing too much or too little, since the knowledge curve seems to be normal.
  
@@ -31,7 +31,7 @@ After inquiring about the blockchain knowledge of the respondents, some affirmat
 
 Independently, these affirmations don't hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
 
-The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure \ref{fig:blockchain_crypto_opinions} and in table \ref{table:blockchain_crypto_opinions}.
+The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions} and in Table~\ref{table:blockchain_crypto_opinions}.
 
 \begin{figure}[h]
 \centering
@@ -40,10 +40,8 @@ The first affirmation states that a blockchain, any at all, independently of the
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
 
-\todo{fcorreia: a legenda da figura está a ser cortada}
-
-\todo{fcorreia: eu tiraria os prefixos "Affirmation 123" e deixava diretamente a pergunta em cada celula. acho que basta para se perceber. no caption podes clarificar que a tabela se refere às perguntas na categoria "Blockchain Knowledge and Opinions"}
-
+\todo{fix images}
+\todo{fix table content: por so 2 casas decimais}
 \todo{fcorreia: está um pouco grande esta tabela. dá para reduzir ao tamanho de letra dos titulos das colunas e das perguntas?}
 
 %%%%%% TABLE START %%%%%%%%%%%%%%
@@ -51,18 +49,17 @@ The first affirmation states that a blockchain, any at all, independently of the
 % \usepackage[normalem]{ulem}
 % \useunder{\uline}{\ul}{}
 \begin{table}[ht]
-\centering
-\begin{tabular}{l|c|c|c|c|c|c|}
-\cline{2-7}
-                                                                                                                                                                       & \multicolumn{1}{l|}{Mode} & \multicolumn{1}{l|}{Median} & \multicolumn{1}{l|}{Mean} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Standard\\  Deviation\end{tabular}} & \multicolumn{1}{l|}{Range} & \multicolumn{1}{l|}{Skewness} \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Affirmation 1 - Blockchain needs\\ cryptocurrencies to work well\end{tabular}}                                          & 1                         & 1                           & 1,3529                    & 0,7859                                                                             & 3                          & 2,7418                        \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Affirmation 2 - Cryptocurrencies\\ are only useful as incentives in\\ public blockchains\end{tabular}}                  & 4                         & 4                           & 4,0556                    & 0,8726                                                                             & 4                          & -2,5059                       \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Affirmation 3 - Blockchains can\\ be useful in some cases, regardless\\ of having or not cryptocurrencies\end{tabular}} & 5                         & 5                           & 4,6111                    & 0,5016                                                                             & 1                          & -0,4984                       \\ \hline
-\end{tabular}
-\caption{My caption}
-\label{table:blockchain_crypto_opinions}
-\end{table}
-
+    \centering
+    \caption{My caption}
+    \label{my-label}
+    \begin{tabular}{l|c|c|c|c|c|c|}
+    \cline{2-7}
+                                                                                                                                                                & \multicolumn{1}{l|}{Mode} & \multicolumn{1}{l|}{Median} & \multicolumn{1}{l|}{Mean} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Standard\\  Deviation\end{tabular}} & \multicolumn{1}{l|}{Range} & \multicolumn{1}{l|}{Skewness} \\ \hline
+    \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}1. Blockchain needs \\ cryptocurrencies to work well\end{tabular}}                                          & 1                         & 1                           & 1,36                      & 0,79                                                                               & 3                          & 2,74                          \\ \hline
+    \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}2.  Cryptocurrencies are only \\ useful as incentives in public \\ blockchains\end{tabular}}                & 4                         & 4                           & 4,06                      & 0,87                                                                               & 4                          & -2,51                         \\ \hline
+    \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}3. Blockchains can be useful in\\ some cases, regardless of having \\ or not cryptocurrencies\end{tabular}} & 5                         & 5                           & 4,61                      & 0,50                                                                               & 1                          & -0,50                         \\ \hline
+    \end{tabular}
+    \end{table}
 %%%%%%%%%%% TABLE END %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{itemize}
