--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -4,14 +4,13 @@
 
 The first goal for this part of the survey is to find out the points of improvement for supply chain. What is being questioned are not the issues of the supply chain themselves, which were already asked, but what parts of supply chain, even though they may already work well, could work even better.
 
-The second goal is to find out more about the requirements that an information system must have to satisfy the needs of SCM. This includes ranking the functionalities of an information system for their importance. Many of these functionalities probably relate to the points of improvement found here, as well as to the supply chain issues described in section \ref{sec-supplychainissues}.
+The second goal is to find out more about the requirements that an information system must have to satisfy the needs of SCM. This includes ranking the functionalities of an information system for their importance. Many of these functionalities probably relate to the points of improvement found here, as well as to the supply chain issues described in Section~\ref{sec-supplychainissues}.
 
 %Problema: há varios graficos para mostrar, mas alguns deles, como o da figura 6.1, têm varias (7 a 8) distribuições para mostrar, onde cada uma delas tem os seus valores das metricas.
 
 %2 EM 1
 %GRAFICOS DOS SUPPLY CHAIN IMPROVEMENT ASPECTS
 
-%TODO: VALE A PENA DIVIDIR EM VARIAS IMAGENS?
 
 For the sake of simplifying the ranking process for both the \textit{"points of improvement"} and \textit{"functionalities of an information system"}, a division into groups of importance shall be done according to the observed results. The importance scale went from 1 to 5, but most of the mean scores were between 3 and 4.5. 
 
@@ -72,7 +71,7 @@ The importance ranking described as before follows below:
 %Points of failure from before: traceability, inventory management is ESSENTIAL
 \begin{itemize}
 
-    \item It had already been concluded from the previous set of questions in \ref{sec-supplychainissues} that inventory management was an essential discipline to SCM, so it was expected that \textit{Supply Control} would be rated highly as a point of improvement, which it did. The same can be said about \textit{Traceability}: it was expected to rank highly, since it is related to both quality assurance and availability of information, two other issues that were validated in the previous set of questions. At the same time, \textit{Fraud Detection} was also highly ranked, which can be explained by its relation to traceability and quality compliance and control. \textbf{Traceability helps to avoid fraud and, at the same time, fraud detection also relates to quality control and compliance, since avoiding fraud is all about making sure that the products circulating the supply chain are authentic and have good quality.} With this in mind, it is only natural that Fraud Detection is considered important, together with traceability.
+    \item It had already been concluded from the previous set of questions in~\ref{sec-supplychainissues} that inventory management was an essential discipline to SCM, so it was expected that \textit{Supply Control} would be rated highly as a point of improvement, which it did. The same can be said about \textit{Traceability}: it was expected to rank highly, since it is related to both quality assurance and availability of information, two other issues that were validated in the previous set of questions. At the same time, \textit{Fraud Detection} was also highly ranked, which can be explained by its relation to traceability and quality compliance and control. \textbf{Traceability helps to avoid fraud and, at the same time, fraud detection also relates to quality control and compliance, since avoiding fraud is all about making sure that the products circulating the supply chain are authentic and have good quality.} With this in mind, it is only natural that Fraud Detection is considered important, together with traceability.
 
 \textbf{In conclusion, from the 3 most important items, 2 of them depend directly on the third one, traceability, which makes traceability the most important point of improvement in the supply chain.}
 
@@ -167,9 +166,9 @@ Starting with the analysis of the first question:
 \begin{itemize}
     \item \textbf{Financial transactions was, by far, the most popular choice.} The respondents look at blockchain as a way to move money as an asset, more than a tool to manage the goods themselves, since traditional systems only deal with data and the money is dealt with by third parties (banks). It makes sense that \textbf{the second most voted choice is Contract Enforcement.} As per the background research and state of the art, it was pointed out that some of the applications already enforce payments through contracts, when the goods are delivered,for instance, without the need of a third party (thus reducing fees). Financial transactions and contract management go hand in hand. 
      
-    \item With the same number of votes, \textbf{also in second place, is regulatory compliance and auditing}. Regulatory compliance is also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thouroughly verified. This means that traceability is a highly sought after application of blockchain.}
-    \item Secure data storage was also highly voted. Security is an important focus in information systems, so this should be taken into account when building the proof-of-concept. In the previous set of questions, access control and security according to the latest requirements were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts its cryptographic security, immutability by design and easy to implement access control.}. 
-    %TODO check grammar of last sentence
+    \item With the same number of votes, \textbf{also in second place, is "regulatory compliance and auditing"}. Regulatory compliance is a term also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thouroughly verified. This means that traceability is a highly sought after application of blockchain.}
+    \item "Secure data storage" was also a highly voted option. Security is an important focus in information systems, so this should be taken into account when building the proof-of-concept. In the previous set of questions, "access control" and "security according to the latest requirements" were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts of being cryptographically secure, having immutability by design and an easy to implement access control.}. 
+
 \end{itemize}
 
 The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed.
@@ -181,7 +180,7 @@ Finally, an analysis of the benefits that blockchain can bring to the supply cha
 
     The first two items were expected to rank high. They directly relate to the security and traceability, points of improvement already discussed - traceability makes it possible to view the records to make sure nothing suspicious is going on, and the security and immutability of the information makes it impossible to tamper with the data.
     
-    The third point, "Stronger working relationships with partners", however, is interesting to see being chosen a high ranked benefit. The concept of strong relationships with partners is linked to  the concept of \textbf{internal supply chain trust}, which was already introduced in \ref{sec:advantes-blockchain}. The ability for partners to trust each other is what makes the supply chain possible and efficient to the standards of today. It seems that the professionals really do think of blockchain as a tool to improve this internal trust.
+    The third point, "Stronger working relationships with partners", however, is interesting to see being chosen a high ranked benefit. The concept of strong relationships with partners is linked to  the concept of \textbf{internal supply chain trust}, which was already introduced in~\ref{sec:advantes-blockchain}. The ability for partners to trust each other is what makes the supply chain possible and efficient to the standards of today. It seems that the professionals really do think of blockchain as a tool to improve this internal trust.
     
     The selection of these 3 items as the most voted does not seem to be a coincidence. \textbf{Blockchain can be used as a source of truth for the supply chain and this leads to the side benefits of internal trust, better relationships with the partners, less fraud, less tampering, less leaks, among other benefits, all made possible because of the main characteristics: security and traceability.}
 \end{itemize}
