--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -1,15 +1,14 @@
 The survey was written during the months of March and April, 2018, with results being collected from the end of April up until the mid of June. The purpose, methodology and results of the survey are analyzed in this chapter, leading to the validation of the issues mentioned in the previous chapters. The survey and analysis done here also serves as a basis for the requirements that were used to build a Proof-of-Concept (PoC) prototype. 
 
-%Maybe push this later to the next chapter instead?
 However, due to various factors, the survey and collection of results was delayed from the initial planning, resulting in the collection of results only being completed in June. Thus, the PoC used some assumptions from both the background analysis and the few initial answers from the survey, and kept iterating the requirements based on the new answers received during the development. 
 
 %Filipe's Comment: <em vez de tentar justificar porque é que a survey apareceu tarde, explicaria apenas que os resultados não chegaram a tempo de informar todas as decisões de design e implementação>
 
-\todo{fcorreia: sim, isto parece-me melhor vir mais tarde (ou não vir, ver o comentário no latex aqui)}
+\todo{pedro: explain LATER why the survey was late}
 
 
 \section{Purpose and Target}
-Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in \ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues, improvements and requirements do the experts really find the most important?"}. 
+Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in~\ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues, improvements and requirements do the experts really find the most important?"}. 
 
 \todo{fcorreia: aqui, ou algures, precisas de explicar que o objetivo era que a tua abordagem fosse guiada por necessidades da prática atual no domínio das SCs. Reconheceu-se que o importante seria obter esse conhecimento a partir de peritos da área. Mostrando-se impossível ter acesso direto a essas pessoaos, a forma arranjada para obter esse conhecimento foi usando um survey}
 
@@ -82,11 +81,7 @@ The questions of the survey can be roughly grouped into four main groups of ques
 
 % TODO: What kind of statistical analysis are we conducting to get the results we want - report better
  
-The analysis of the answers is done through bar graphics (some with frequency polygon), and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions, as well as the way they are interpreted in this study are detailed in table \ref{metrics-table}.
-
-\todo{fcorreia: queres dizer graphs em vez de graphics}
-
-\todo{fcorreia: "Table 6.1" ("t" maiusculo)}
+The analysis of the answers is done through bar graphs and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions, as well as the way they are interpreted in this study are detailed in Table~\ref{metrics-table}.
 
 
 \todo{fcorreia: acho vale a pena explicares estes conceitos da estatística. podes dizer que vais calcular estes valores para a tua análise e podes simplesmente usar os conceitos assumindo que toda a gente sabe o que significam. se tiveres boas referências, fica sempre bem adicionar algumas. o verdadeiramente importante são as conclusões que vais tirar com base nestes valores, e aí pode valer a pena dar a entender mais algum conceito estatístico que seja importante para se perceber o raciocinio, mas sempre sem entrar neste tipo de detalhe.
