--- a/thesis.tex
+++ b/thesis.tex
@@ -123,8 +123,7 @@
 
 
 	%\subsection*{2. Naming Conventions and Definitions}
-	%TODO: glossary
-    %    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
+	%glossary ->    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
 
 	%	\par PoC - Proof of Concept
 	%	\par SLA - Service Level Agreement
