--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -68,7 +68,7 @@ The partial requirements mean that part of the requirement was possible, or the 
 
 \par \textbf{Non-Functional Requirements Validation}
 
-The validation and analysis of the satisfaction of the quality requirements is presented in Table \ref{table:quality-requirements-validation}.
+The validation and analysis of the satisfaction of the quality requirements is presented in Table~\ref{table:quality-requirements-validation}.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
@@ -98,7 +98,7 @@ The validation and analysis of the satisfaction of the quality requirements is p
 		\end{table}
 
 
-By joining the conclusions reached in both the functional and non-functional requirements, there is a better understanding  towards validating the requirements from the survey and also reaching a final conclusion for the last questions. The validation of the survey requirements is shown in table \ref{table:elicited-requirements-validation}.
+By joining the conclusions reached in both the functional and non-functional requirements, there is a better understanding  towards validating the requirements from the survey and also reaching a final conclusion for the last questions. The validation of the survey requirements is shown in Table~\ref{table:elicited-requirements-validation}.
 
 \todo{pedro: captions das tabelas em cima, em vez de em baixo}
 %After all of these use cases, conclusions about how many were or were not possible, and what does that tell us about the functionalities that the survey concluded were essential: does the prototype feasibly implement them?
