--- a/survey.tex
+++ b/survey.tex
@@ -1,7 +1,6 @@
-\chapter{Survey Research - Supply chain Issues Validation and Requirements Elicitation}
+\chapter{Survey Research - Supply Chain Issues Validation and Requirements Elicitation}
 \label{chap:survey}
 \minitoc \mtcskip \noindent
-\todo{pedro: titulo capitulo maiusculas}
 \input{survey/surveyintro.tex}
 \input{survey/survey1.tex}
 \input{survey/survey2.tex}
